[Misc] Fix some Sonarqube-reported violations