@@ -21,7 +21,6 @@ package org.xwiki.test.ui.po;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.openqa.selenium.By;
 import org.openqa.selenium.Keys;
@@ -230,7 +229,7 @@ public class SuggestInputElement extends BaseElement
     {
         return getDriver()
             .findElementsWithoutWaiting(By.cssSelector(".selectize-dropdown.active .xwiki-selectize-option")).stream()
-            .map(SuggestionElement::new).collect(Collectors.toList());
+            .map(SuggestionElement::new).toList();
     }
 
     /**
@@ -297,7 +296,7 @@ public class SuggestInputElement extends BaseElement
     {
         if ("select".equals(this.originalInput.getTagName())) {
             return new Select(this.originalInput).getAllSelectedOptions().stream()
-                .map(option -> option.getAttribute("value")).collect(Collectors.toList());
+                .map(option -> option.getAttribute("value")).toList();
         } else {
             return Arrays.asList(this.originalInput.getAttribute("value").split(","));
         }
@@ -309,7 +308,7 @@ public class SuggestInputElement extends BaseElement
     public List<SuggestionElement> getSelectedSuggestions()
     {
         return getDriver().findElementsWithoutWaiting(this.container, By.className("xwiki-selectize-option")).stream()
-            .map(SuggestionElement::new).collect(Collectors.toList());
+            .map(SuggestionElement::new).toList();
     }
 
     /**
